# LR6

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  main  main.cpp  tasks.cpp  tests_app  tests_app.cpp
